# GasHydrate-Analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/visualize_app/: __init__.py  __main__.py
src/visualize_app/config/: __init__.py  experiment_config.py
src/visualize_app/core/: __init__.py  app_state.py  event_bus.py
src/visualize_app/models/: __init__.py  experiment_data.py
src/visualize_app/services/: __init__.py  excel_parser.py  plot_engine.py  solubility_engine.py  solubility_plot_engine.py
src/visualize_app/ui/: __init__.py  main_window.py  main_window_old.py  theme.py
src/visualize_app/ui/components/: __init__.py  base_component.py  plot_area.py  sidebar_panel.py  solubility_tab.py  top_bar.py
src/visualize_app/ui/dialogs/: __init__.py  parsing_schema_dialog.py  plot_settings_dialog.py  recent_files_dialog.py  setup_config_dialog.py
src/visualize_app/ui/widgets/: __init__.py
src/visualize_app/utils/: __init__.py  file_history.py  logger.py  pressure_units.py  setup_config.py
web_app/: .env.example  README.md  docker-compose.yml
web_app/backend/: .env.example  Dockerfile  requirements.txt  run.py
web_app/backend/app/: __init__.py  main.py  plot_builders.py  schemas.py
web_app/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web_app/frontend/public/: test.xlsx
web_app/frontend/src/: App.tsx  styles.css
web_app/frontend/src/components/: ChartPanel.tsx  Modal.tsx
